--- a/package.json
+++ b/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "axios": "^0.21.0",
     "element-ui": "^2.14.1",
+    "node-sass": "^5.0.0",
+    "sass-loader": "^7.0.3",
     "vue": "^2.5.2",
     "vue-router": "^3.0.1",
     "vuex": "^3.5.1"
