--- a/package.json
+++ b/package.json
@@ -13,9 +13,11 @@
     "axios": "^0.21.0",
     "element-ui": "^2.14.1",
     "node-sass": "^5.0.0",
+    "quill": "^1.3.7",
     "sass-loader": "^7.0.3",
     "swiper": "^3.4.2",
     "vue": "^2.5.2",
+    "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.5.1"
   },
