--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "sass-loader": "^7.0.3",
     "swiper": "^3.4.2",
     "vue": "^2.5.2",
+    "vue-cookies": "^1.7.4",
     "vue-quill-editor": "^3.0.6",
     "vue-router": "^3.0.1",
     "vuex": "^3.5.1"
